deploy/local-minikube/django-clearsessions-cronjob.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: k8s-test-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
        app.kubernetes.io/name: django
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: k8s-test-django
    spec:
      containers:
        - name: django
          image: django_unit_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: k8s-test-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
        app.kubernetes.io/name: django
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: k8s-test-django
    spec:
      containers:
        - name: django
          image: django_unit_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - name: http
      port: 80
      targetPort: 80
